# MavTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _clang-format
app/: hooks.c  main.c  system_config.h
platform/: freertos.cmake  libopencm3.cmake  mavlink.cmake
platform/stm32f407discovery/: FreeRTOSConfig.h  platform.c  platform.cmake  platform.h  toolchain.cmake
platform/stm32vldiscovery/: FreeRTOSConfig.h  platform.c  platform.cmake  platform.h  platform.ld  toolchain.cmake
utils/: pinger.py
